<resources>
    <string name="app_name">rs.raf.projekat1.ognjen_prica_10620</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="jira_system_for_raf_students">Jira system for Raf students</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="statistics">Statistics</string>
    <string name="new_ticket">New ticket</string>
    <string name="tickets">Tickets</string>
    <string name="profile">Profile</string>
    <string name="newTicket">New</string>
    <string name="log_out">Log out</string>
    <string name="add_new_ticket">Add new ticket</string>
    <string name="est">Est.</string>
    <string name="title">Title</string>
    <string name="ticket_title">Ticket title</string>
    <string name="ticket_description">Ticket description</string>
    <string name="done">Done</string>
    <string name="in_progress">In progress</string>
    <string name="todo">ToDo</string>
    <string name="search">Search…</string>
    <string name="raf_jira_statistics">Raf Jira statistics</string>
    <string name="enhancements">Enhancements</string>
    <string name="bugs">Bugs</string>
    <string name="type">Type</string>
    <string name="moveDone">Move to Done</string>
    <string name="move_to_todo">Move to ToDo</string>
    <string name="ticket_type">Ticket type</string>
    <string name="priority">Priority</string>
    <string name="estimation">Estimation</string>
    <string name="logged_time">Logged time</string>
    <string name="ticket_desc">Ticket desc.</string>
    <string name="edit">Edit</string>
    <string name="edit_ticket">Edit ticket</string>
    <string name="save">Save</string>
    <string name="highest">Highest</string>
    <string name="high">high</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="lowest">Lowest</string>
    <string name="bug">Bug</string>
    <string name="enhancement">Enhancement</string>

</resources>